# cookiecutter-skeletor

./: .gitignore  README  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.package_name }}/: README.md  docker-compose.yml  poetry.toml  pyproject.toml
{{ cookiecutter.package_name }}/docs/: develop.md
{{ cookiecutter.package_name }}/src/{{cookiecutter.project_slug}}/: logger.py
{{ cookiecutter.project_slug }}/: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_slug }}/dev/: development.md
{{ cookiecutter.project_slug }}/docs/: development.md
{{ cookiecutter.project_slug }}/src/utils/: __init__.py  helper.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.inner_package_name }}/: __init__.py
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/: logger.py  utils.py
{{ cookiecutter.project_slug }}/utils/: __init__.py  helper.py
