[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
{% if cookiecutter.cli_builder == 'y' %}typer = {extras = ["all"], version = "^0.7.0"}{% endif %}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# placeholder for dev env dependencies
pytest = "^7.2.0"
pytest-cov = "*"
mypy = "*"
flake8 = "*"
bandit = "*"
coverage = "*"
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"