[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
logging-json = {git = "https://github.com/Colin-b/logging_json.git"}
{% if cookiecutter.cli_builder == 'y' or cookiecutter.cli_builder == 'Y' %}typer = {extras = ["all"], version = "^0.7.0"}{% endif %}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipython = "^8.8.0"
mypy = "^0.991"
pytest-cov = "^4.0.0"
bandit = "^1.7.4"
toml = "^0.10.2"
pre-commit = "*"
isort = "^5.12.0"
autopep8 = "*"

{% if cookiecutter.cli_builder == 'y' or cookiecutter.cli_builder == 'Y' %}
[tool.poetry.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli:main"
{% endif %}

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
minversion = "7.0"
console_output_style = "progress"
addopts = ["-ra -q", "--cov=.", "--cov-report=term-missing", "--no-cov-on-fail", "--cache-clear"]

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'

[tool.autopep8]
max_line_length = 120
#exclude = " "
max-line-length = 88
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
